css/style.css
h1 {
  font-size: 42pt; }

body {
  background-color: #FDE4EE;
  font-size: 16pt;
  display: flex;
  min-height: 100vh;
  flex-direction: column; }

main {
  flex: 1 0 auto; }

footer {
  text-align: right;
  padding: 10px;
  background-color: #efefef;
  font-size: 12pt; }
  footer .footerlinks {
    padding: 10px;
    color: black;
    font-size: 12pt; }

.playground {
  height: 400px;
  border: 2px solid black;
  margin: 0px 20px; }

.dummy {
  background-color: #71FFF8;
  height: 120px;
  width: 120px;
  box-shadow: 2px 2px 22px 1px #5e5e5e; }

.dropdown-button {
  padding-right: 10px;
  padding-left: 20px; }

.buttonsrow {
  margin-top: 20px; }

.btn {
  margin: 10px; }

/*# sourceMappingURL=style.css.map */

